Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -171,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPFu9pvFU98GdBNPx56opf5",
+      "authorship_tag": "ABX9TyOt5NB+lsf55FTYM6RmIhKD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9668,7 +9668,7 @@
         "id": "qBCHbut_dgJq"
       },
       "source": [
-        "#### "
+        "####  1991번"
       ]
     },
     {
@@ -9680,7 +9680,48 @@
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def preorder(x):\n",
+        "    global alpha\n",
+        "    if x == '.':\n",
+        "        return\n",
+        "    \n",
+        "    print(x,end='')\n",
+        "    preorder(alpha[x][0])\n",
+        "    preorder(alpha[x][1])\n",
+        "\n",
+        "def inorder(x):\n",
+        "    global alpha\n",
+        "    if x == '.':\n",
+        "        return\n",
+        "\n",
+        "    inorder(alpha[x][0])\n",
+        "    print(x,end='')\n",
+        "    inorder(alpha[x][1])\n",
+        "\n",
+        "def postfix(x):\n",
+        "    global alpha\n",
+        "    if x == '.':\n",
+        "        return\n",
+        "    \n",
+        "    postfix(alpha[x][0])\n",
+        "    postfix(alpha[x][1])\n",
+        "    print(x,end='')\n",
+        "\n",
         "def main():\n",
+        "    global pre_s, ino_s, pos_s, alpha\n",
+        "\n",
+        "    v = int(input())\n",
+        "    alpha = dict()\n",
+        "    for _ in range(v):\n",
+        "        root, left, right = input().split()\n",
+        "        alpha[root] = [left, right]\n",
+        "    \n",
+        "    preorder('A')\n",
+        "    print()\n",
+        "    inorder('A')\n",
+        "    print()\n",
+        "    postfix('A')\n",
+        "        \n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -9694,7 +9735,7 @@
         "id": "xxKtbBIdcPEH"
       },
       "source": [
-        "#### "
+        "####  2263번(***)"
       ]
     },
     {
@@ -9703,10 +9744,36 @@
         "id": "J8hTuZA_cPEI"
       },
       "source": [
+        "### https://devlibrary00108.tistory.com/83?category=949757\n",
         "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def divide(inorder_start, inorder_end, postfix_start, postfix_end):\n",
+        "    global inorder, postfix, index\n",
+        "    if inorder_start > inorder_start or postfix_start > postfix_end:\n",
+        "        return\n",
+        "\n",
+        "    root = postfix[postfix_end]\n",
+        "    print(root, end=' ')\n",
+        "\n",
+        "    left_cnt = index[root] - inorder_start\n",
+        "    right_cnt = inorder_end - index[root]\n",
+        "    divide(inorder_start, inorder_start+left_cnt-1, postfix_start, postfix_start+left_cnt-1)\n",
+        "    divide(inorder_end-right_cnt+1, inorder_end,postfix_end-right_cnt, postfix_end-1)\n",
+        "\n",
         "def main():\n",
+        "    global inorder, postfix, index\n",
+        "    n = int(input())\n",
+        "    inorder = list(map(int, input().split()))\n",
+        "    postfix = list(map(int, input().split()))\n",
+        "    index = [False] * (n+1)\n",
+        "    \n",
+        "    for i in range(n):\n",
+        "        index[inorder[i]] = i\n",
+        "    \n",
+        "    divide(0,n-1,0,n-1)\n",
+        "\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
