Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -171,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOt5NB+lsf55FTYM6RmIhKD",
+      "authorship_tag": "ABX9TyMJSmrghN59F037eAUWegfL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9787,7 +9787,7 @@
         "id": "1yC6oWABcPYn"
       },
       "source": [
-        "#### "
+        "####  5639번"
       ]
     },
     {
@@ -9797,9 +9797,36 @@
       },
       "source": [
         "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
+        "def divide(start, end):\n",
+        "    global preorder\n",
+        "    if start > end:\n",
+        "        return\n",
+        "\n",
+        "    root = start\n",
+        "    t = -1\n",
+        "    for i in range(start,end+1):\n",
+        "        if preorder[i] <= preorder[root]:\n",
+        "            t = i\n",
+        "        else:\n",
+        "            break\n",
+        "\n",
+        "    if t == -1:\n",
+        "        return\n",
+        "\n",
+        "    divide(start+1,t)\n",
+        "    divide(t+1,end)\n",
+        "\n",
+        "    print(preorder[root])\n",
+        "\n",
         "\n",
         "def main():\n",
+        "    global preorder\n",
+        "    preorder = []\n",
+        "    for i in sys.stdin: # range(9):#\n",
+        "        preorder.append(int(i))\n",
+        "    divide(0,len(preorder)-1)\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
