Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -171,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMJSmrghN59F037eAUWegfL",
+      "authorship_tag": "ABX9TyO/wWQNRCOk0OjLxtTaIkIA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9840,7 +9840,7 @@
         "id": "cZeUBBpOcPdv"
       },
       "source": [
-        "#### "
+        "####  4803번\n"
       ]
     },
     {
@@ -9850,9 +9850,57 @@
       },
       "source": [
         "import sys\n",
-        "input = sys.stdin.readline\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "#input = sys.stdin.readline\n",
+        "\n",
+        "def dfs(x):\n",
+        "    global node, edge, is_tree, group, visited\n",
+        "    \n",
+        "    if node[x] == group:\n",
+        "        is_tree = False\n",
+        "\n",
+        "    node[x] = group\n",
+        "    for i in edge[x]:\n",
+        "        dfs(i)\n",
         "\n",
         "def main():\n",
+        "    global node, edge, is_tree, group\n",
+        "    case_num = 1\n",
+        "\n",
+        "    while True:\n",
+        "        n, m = map(int, input().split())\n",
+        "\n",
+        "        if not n and not m:\n",
+        "            return\n",
+        "        \n",
+        "        node = [-1] * (n+1)\n",
+        "        visited = [False] * (n+1)\n",
+        "        edge = [[] for _ in range(n+1)]\n",
+        "        \n",
+        "\n",
+        "        for _ in range(m):\n",
+        "            a, b = map(int, input().split())\n",
+        "            edge[a].append(b)\n",
+        "            edge[b].append(a)\n",
+        "        \n",
+        "        cnt_tree = 0\n",
+        "        group = 0\n",
+        "        for i in range(1,n+1):\n",
+        "            if node[i] == -1:\n",
+        "                group += 1\n",
+        "                is_tree = True\n",
+        "                dfs(i)\n",
+        "                if is_tree:\n",
+        "                    cnt_tree += 1\n",
+        "        \n",
+        "        if cnt_tree == 0:\n",
+        "            print('Case {0}: No trees.'.format(case_num))\n",
+        "        elif cnt_tree == 1:\n",
+        "            print('Case {0}: There is one tree.'.format(case_num))\n",
+        "        else:\n",
+        "            print('Case {0}: A forest of {1} trees.'.format(case_num, cnt_tree))\n",
+        "        \n",
+        "        case_num += 1   \n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -12221,7 +12269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1057번"
       ],
       "metadata": {
         "id": "ALUnbbrdfgjl"
@@ -12231,6 +12279,48 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n , kim_n, im_n = map(int, input().split())\n",
+        "    round = 1\n",
+        "    \n",
+        "    while n > 0:\n",
+        "        kim_n += 1\n",
+        "        kim_n //= 2\n",
+        "        im_n += 1        \n",
+        "        im_n //= 2\n",
+        "        n //= 2\n",
+        "        if kim_n == im_n:\n",
+        "            break\n",
+        "        round += 1\n",
+        "\n",
+        "    print(round)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "Sedm0HVzfgjm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "6kR76xLjXJBq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
@@ -12239,7 +12329,7 @@
         "    main()"
       ],
       "metadata": {
-        "id": "Sedm0HVzfgjm"
+        "id": "yLX3V61zXJBr"
       },
       "execution_count": null,
       "outputs": []
