Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -171,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO/wWQNRCOk0OjLxtTaIkIA",
+      "authorship_tag": "ABX9TyMYbkcNeeybZOG6kOn4FzBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9851,20 +9851,24 @@
       "source": [
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
-        "#input = sys.stdin.readline\n",
+        "input = sys.stdin.readline\n",
         "\n",
         "def dfs(x):\n",
-        "    global node, edge, is_tree, group, visited\n",
+        "    global node, edge, visited, node_cnt, edge_cnt\n",
         "    \n",
-        "    if node[x] == group:\n",
-        "        is_tree = False\n",
+        "    if visited[x] == True:\n",
+        "        return\n",
         "\n",
-        "    node[x] = group\n",
+        "    visited[x] = True\n",
+        "    node[x] = True\n",
+        "    node_cnt += 1\n",
+        "\n",
         "    for i in edge[x]:\n",
+        "        edge_cnt += 1\n",
         "        dfs(i)\n",
         "\n",
         "def main():\n",
-        "    global node, edge, is_tree, group\n",
+        "    global node, edge, visited, node_cnt, edge_cnt\n",
         "    case_num = 1\n",
         "\n",
         "    while True:\n",
@@ -9873,10 +9877,9 @@
         "        if not n and not m:\n",
         "            return\n",
         "        \n",
-        "        node = [-1] * (n+1)\n",
+        "        node = [False] * (n+1)\n",
         "        visited = [False] * (n+1)\n",
         "        edge = [[] for _ in range(n+1)]\n",
-        "        \n",
         "\n",
         "        for _ in range(m):\n",
         "            a, b = map(int, input().split())\n",
@@ -9884,13 +9887,13 @@
         "            edge[b].append(a)\n",
         "        \n",
         "        cnt_tree = 0\n",
-        "        group = 0\n",
         "        for i in range(1,n+1):\n",
-        "            if node[i] == -1:\n",
-        "                group += 1\n",
-        "                is_tree = True\n",
+        "            if not node[i]:\n",
+        "                node_cnt, edge_cnt = 0, 0\n",
+        "                \n",
         "                dfs(i)\n",
-        "                if is_tree:\n",
+        "\n",
+        "                if 2*(node_cnt-1) == edge_cnt:\n",
         "                    cnt_tree += 1\n",
         "        \n",
         "        if cnt_tree == 0:\n",
