Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -171,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMYbkcNeeybZOG6kOn4FzBs",
+      "authorship_tag": "ABX9TyPKOUZuXzwKUi8y4reOoeAS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9853,7 +9853,7 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def dfs(x):\n",
+        "def dfs(x):                                         # deapth first search\n",
         "    global node, edge, visited, node_cnt, edge_cnt\n",
         "    \n",
         "    if visited[x] == True:\n",
@@ -9917,7 +9917,7 @@
         "id": "xkIriFz6cHx4"
       },
       "source": [
-        "### 29단계 : ===========**"
+        "### 29단계 : 유니온 파인드===========**"
       ]
     },
     {
@@ -9926,13 +9926,198 @@
         "id": "x7YAB5ujcHx5"
       },
       "source": [
-        "#### "
+        "####  1717번 : 분리 집합"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "5nIG-K6NcHx5"
+      },
+      "source": [
+        "### https://m.blog.naver.com/PostView.nhn?blogId=wnsgh224&logNo=120196308434&proxyReferer=http:%2F%2F211.193.127.39%2F\n",
+        "### 분리 집합 : 해당 원소 노드가 속해 있는 집합, 즉 루트 노드를 찾는 연산\n",
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def findParent(x):\n",
+        "    global s\n",
+        "    if s[x] == x:\n",
+        "        return x\n",
+        "    s[x] = findParent(s[x])\n",
+        "    return s[x]\n",
+        "\n",
+        "def union(x, y):\n",
+        "    global s\n",
+        "    x, y = findParent(x), findParent(y)\n",
+        "    if x < y:\n",
+        "        s[y] = x\n",
+        "    else:\n",
+        "        s[x] = y\n",
+        "\n",
+        "def main():\n",
+        "    global s\n",
+        "    n, m = map(int, input().split())\n",
+        "    \n",
+        "    s = [i for i in range(n+1)]\n",
+        "    for _ in range(m):\n",
+        "        o, a, b = map(int, input().split())\n",
+        "        if o == 0:\n",
+        "            union(a, `  b)\n",
+        "        else:\n",
+        "            if findParent(a) == findParent(b):\n",
+        "                print('YES')\n",
+        "            else:\n",
+        "                print('NO')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kArAHccTng62"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O2Ibxahnng62"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "def findParent(x):\n",
+        "    global s\n",
+        "    if s[x] == x:\n",
+        "        return x\n",
+        "    s[x] = findParent(s[x])\n",
+        "    return s[x]\n",
+        "\n",
+        "def union(x, y):\n",
+        "    global s\n",
+        "    x, y = findParent(x), findParent(y)\n",
+        "    if x < y:\n",
+        "        s[y] = x\n",
+        "    else:\n",
+        "        s[x] = y\n",
+        "\n",
+        "def main():\n",
+        "    global s\n",
+        "    n = int(input())\n",
+        "    m = int(input())\n",
+        "\n",
+        "    s = [i for i in range(n+1)]\n",
+        "    for i in range(n):\n",
+        "        in_list = list(map(int, input().split())) \n",
+        "        for j in range(i,n):\n",
+        "            if in_list[j]:\n",
+        "                union(i+1,j+1)\n",
+        "    \n",
+        "    travel = list(map(int, input().split()))\n",
+        "    can = True\n",
+        "    for i in range(len(travel)-1):\n",
+        "        if findParent(travel[i]) == findParent(travel[i+1]):\n",
+        "            continue\n",
+        "        else:\n",
+        "            can = False\n",
+        "            break\n",
+        "    \n",
+        "    if can:\n",
+        "        print('YES')\n",
+        "    else:\n",
+        "        print('NO')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nNO6sdMynhHy"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yQ1wff0CnhHy"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j-N-s25MnhQ7"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZViUie0bnhQ7"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G3BQimBInbs_"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RU-6_5TfnbtA"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "joXhzPe7nbtA"
       },
       "source": [
         "import sys\n",
