Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -146,12 +146,11 @@
         "Xc2rVYZ1DWAq",
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
-        "xkIriFz6cHx4",
         "x7YAB5ujcHx5",
         "kArAHccTng62",
         "nNO6sdMynhHy",
         "j-N-s25MnhQ7",
-        "G3BQimBInbs_",
+        "RU-6_5TfnbtA",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -211,7 +210,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyN1uy3LfSoo1gUp9aGS6KNV",
+      "authorship_tag": "ABX9TyM01gLV6YreTOTWI3xARZpi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -232,6 +231,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/tjy2202/Problem_Solving/blob/master/%5BBOJ%5D%EB%B0%B1%EC%A4%80_%EB%8B%A8%EA%B3%84%EB%B3%84_%EB%AC%B8%EC%A0%9C%ED%92%80%EC%9D%B4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':  # 스크립트 파일을 메인프로그램과 모듈로 사용 할 때를 구분하기 위한 용도\n",
+        "    main()                  # 파이썬은 시작점이 지정되어있지 않아서"
+      ],
+      "metadata": {
+        "id": "6V1opzHxN2aU"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -10272,15 +10283,15 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
-        "    n, m = map(int, input().split())\n",
-        "    for _ in range(m):\n",
-        "        a, b = map(int, input().split())\n",
-        "    print(n-1)\n",
+        "def main():                             # 메인 함수\n",
+        "    n, m = map(int, input().split())        # 정점의 개수와 간선의 개수 입력\n",
+        "    for _ in range(m):                      # 간선의 개수 만큼 반복\n",
+        "        a, b = map(int, input().split())        # 연결된 정점의 숫자 입력\n",
+        "    print(n-1)                              # 모두 연결되어 있으므로 모든 국가를 여행하는 가장 적은 종류는 n-1이다\n",
         "\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    for _ in range(int(input())):\n",
+        "if __name__ == '__main__':              # 함수형으로 진행\n",
+        "    for _ in range(int(input())):           # 테스크 케이스 수 만큼 반복\n",
         "        main()                  "
       ],
       "execution_count": null,
@@ -10292,7 +10303,7 @@
         "id": "vBoQtJDu-l5f"
       },
       "source": [
-        "#### "
+        "####  1197번 : 기본적인 MST"
       ]
     },
     {
@@ -10305,10 +10316,47 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def findParent(x):      # 부모 노드 찾는 함수\n",
+        "    global s        \n",
+        "    if s[x] == x:           # 자신이 부모 노드이면\n",
+        "        return x                # 자신 return\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()                  "
+        "    s[x] = findParent(s[x]) # 부모 노드가 아니면, x의 부모노드로 변환\n",
+        "    return s[x]             # 결론적으로 x가 속한 집합의 root 반환\n",
+        "\n",
+        "def union(x, y):        # 합집합 연산\n",
+        "    global s                # 글로변 변수 지정\n",
+        "\n",
+        "    if x < y:               # x 보다 y의 노드가 작으면\n",
+        "        s[y] = x                # y -> x 로 변환\n",
+        "    else:                   # 그 이외이면\n",
+        "        s[x] = y                # x -> y 로 변환\n",
+        "\n",
+        "def main():                                 # 메인 함수\n",
+        "    global s                                    # 글로벌 변수 지정\n",
+        "    v, e = map(int, input().split())            # 정점의 개수와 간선의 개수 입력\n",
+        "    \n",
+        "    s = [i for i in range(v+1)]                 # 부모 노드를 나타내는 리스트 생성\n",
+        "    \n",
+        "    edges = []                                  # 간선을 입력 받을 리스트 생성\n",
+        "    for _ in range(e):                          # 간선의 개수 만큼 반복\n",
+        "        edges.append(list(map(int, input().split())))   # 간선들 리스트에 입력\n",
+        "    \n",
+        "    edges = sorted(edges, key=lambda x : x[2])  # 가중치로 간선들 정렬\n",
+        "\n",
+        "    result_mst = 0                              # MST 가중치 변수 생성\n",
+        "    for i, j, k in edges:                       # 모든 간선들 확인\n",
+        "        x = findParent(i)                           # i의 부모 노드 찾기\n",
+        "        y = findParent(j)                           # j의 부모 노드 찾기\n",
+        "\n",
+        "        if x != y:                                  # i와 j의 부모 노드가 같지 않으면\n",
+        "            union(x,y)                                  # i,j의 부모 노드 합집합\n",
+        "            result_mst += k                             # 결과값에 가중치 추가\n",
+        "    \n",
+        "    print(result_mst)                           # MST 가중치 출력\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -10334,8 +10382,8 @@
         "\n",
         "def main():\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()                  "
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -10361,8 +10409,8 @@
         "\n",
         "def main():\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()                  "
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -10388,8 +10436,8 @@
         "\n",
         "def main():\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()                  "
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -10415,8 +10463,8 @@
         "\n",
         "def main():\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()                  "
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -12806,8 +12854,8 @@
         "\n",
         "def main():\n",
         "\n",
-        "if __name__ == '__main__':\n",
-        "    main()"
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
         "id": "yLX3V61zXJBr"
