Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -210,7 +210,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyPn+5DRT1vUo3L+72UQifpw",
+      "authorship_tag": "ABX9TyOavzQcdcUfPqEfV/g7FF9g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10443,7 +10443,7 @@
         "id": "9uEH1xMj-mm9"
       },
       "source": [
-        "#### "
+        "####  1774번"
       ]
     },
     {
@@ -10456,7 +10456,68 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def findParent(x):      # 부모 노드 찾는 함수\n",
+        "    global s        \n",
+        "    if s[x] == x:           # 자신이 부모 노드이면\n",
+        "        return x                # 자신 return\n",
+        "\n",
+        "    s[x] = findParent(s[x]) # 부모 노드가 아니면, x의 부모노드로 변환\n",
+        "    return s[x]             # 결론적으로 x가 속한 집합의 root 반환\n",
+        "\n",
+        "def union(x, y):        # 합집합 연산\n",
+        "    global s                # 글로변 변수 지정\n",
+        "\n",
+        "    if x < y:               # x 보다 y의 노드가 작으면\n",
+        "        s[y] = x                # y -> x 로 변환\n",
+        "    else:                   # 그 이외이면\n",
+        "        s[x] = y                # x -> y 로 변환\n",
+        "\n",
+        "def cal_dist(x, y):     # 거리 계산 함수\n",
+        "    return ((x[0] - y[0]) ** 2 + (x[1] - y[1]) ** 2) ** 0.5     # 유클리드 거리\n",
+        "\n",
+        "def main():                         # 메인 함수\n",
+        "    global s                            # 글로벌 변수 지정\n",
+        "    n, m = map(int, input().split())    # 우주신과 통로의 개수 입력\n",
+        "\n",
+        "    s = [i for i in range(n+1)]         # 부모 노드 나타낼 리스트 생성\n",
+        "\n",
+        "    space = [False]                     # 노드들의 위치 리스트 생성\n",
+        "    for _ in range(n):                  # 우주신의 개수만큼 반복\n",
+        "        space.append(list(map(int, input().split())))   # 우주신의 위치를 리스트에 추가\n",
+        "    \n",
+        "    for _ in range(m):                  # 통로의 수만큼 반복\n",
+        "        a, b = map(int, input().split())    # 연결된 우주신들 입력\n",
+        "        x = findParent(a)                   # a의 부모 노드 찾기\n",
+        "        y = findParent(b)                   # b의 부모 노드 찾기\n",
+        "        \n",
+        "        if x != y:                          # a,b가 같지 않은 그룹이면\n",
+        "            union(x,y)                          # 합집합\n",
+        "\n",
+        "    edges = []                          # 두 별의 선 리스트 생성\n",
+        "    for i in range(1,n+1):                  # 우주신들의 개수 만큼 반복\n",
+        "        x = findParent(i)                       # i의 부모 노드 변수 생성\n",
+        "        for j in range(1,n+1):                  # 우주신들의 개수 만큼 반복\n",
+        "            if i == j:                              # 같은 위치는 0 이기에\n",
+        "                continue                                # 다음으로\n",
+        "            \n",
+        "            y = findParent(j)                       # y의 부모노드 변수 생성\n",
+        "            if s[x] == s[y]:                        # i와 j의 부모노드가 같으면\n",
+        "                continue                                # 통로가 있으므로 continue\n",
+        "\n",
+        "            edges.append([i,j,cal_dist(space[i], space[j])])    # 선 리스트에 두 별과 계산한 거리 추가\n",
+        "    \n",
+        "    sorted_edges = sorted(edges, key=lambda x : x[2])       # 선 리스트 거리 기준으로 정렬\n",
+        "\n",
+        "    result_mst = 0                      # MST 가중치 변수 생성\n",
+        "    for i, j, k in sorted_edges:        # 모든 간선들 확인\n",
+        "        x = findParent(i)                   # i의 부모 노드 찾기\n",
+        "        y = findParent(j)                   # j의 부모 노드 찾기\n",
+        "\n",
+        "        if x != y:                          # i와 j의 부모 노드가 같지 않으면\n",
+        "            union(x,y)                          # i,j의 부모 노드 합집합\n",
+        "            result_mst += k                     # 결과값에 가중치 추가\n",
+        "    \n",
+        "    print('{0:.2f}'.format(result_mst)) # MST 가중치 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
