Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -210,7 +210,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyOavzQcdcUfPqEfV/g7FF9g",
+      "authorship_tag": "ABX9TyMW5gPIqxe1nskC38mnjcsx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10531,7 +10531,7 @@
         "id": "F_HHKAkB-mqL"
       },
       "source": [
-        "#### "
+        "####  2887번(***)"
       ]
     },
     {
@@ -10540,11 +10540,65 @@
         "id": "8QSNJvCO-mqM"
       },
       "source": [
+        "### https://developmentdiary.tistory.com/450\n",
+        "'''\n",
+        "간선의 개수를 줄이는게 목표인데 기존 방식은 V*(V-1)/2으로 비효율적이다.\n",
+        "각 좌표를 기준으로 오름차순 정렬을 했을때 X1->X2가 X1->X3보다 클수는 없기 때문에\n",
+        "좌표별로 구하게 되면 E를 3*(V-1)로 log(N)\n",
+        "'''\n",
+        "\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def findParent(x):      # 부모 노드 찾는 함수\n",
+        "    global s        \n",
+        "    if s[x] == x:           # 자신이 부모 노드이면\n",
+        "        return x                # 자신 return\n",
+        "\n",
+        "    s[x] = findParent(s[x]) # 부모 노드가 아니면, x의 부모노드로 변환\n",
+        "    return s[x]             # 결론적으로 x가 속한 집합의 root 반환\n",
+        "\n",
+        "def union(x, y):        # 합집합 연산\n",
+        "    global s                # 글로변 변수 지정\n",
+        "\n",
+        "    if x < y:               # x 보다 y의 노드가 작으면\n",
+        "        s[y] = x                # y -> x 로 변환\n",
+        "    else:                   # 그 이외이면\n",
+        "        s[x] = y                # x -> y 로 변환\n",
+        "\n",
+        "def cal_cost(x, y):                                                 # 거리 계산 함수\n",
+        "    return min(abs(x[0] - y[0]), abs(x[1] - y[1]), abs(x[2] - y[2]))\n",
+        "\n",
+        "def main():                                             # 메인 함수\n",
+        "    global s                                                # 글로벌 변수 지정    \n",
+        "    n = int(input())                                        # 행성의 개수 입력\n",
+        "\n",
+        "    nodes = []                                              # 행성의 위치를 담을 리스트 생성\n",
+        "    for i in range(n):                                      # 행성의 개수 만큼 반복\n",
+        "        nodes.append(list(map(int, input().split())) + [i])     # 행성의 위치와 인덱스를 입력\n",
+        "    \n",
+        "    s = [i for i in range(n)]                               # 부모 노드를 가르키는 리스트 생성\n",
+        "\n",
+        "    edges = []                                              # 선 리스트 생성\n",
+        "    for i in range(3):                                      # 각 좌표별 반복\n",
+        "        nodes.sort(key = lambda x : x[i])                       # 각 좌표별로 정렬 진행\n",
+        "        for j in range(n-1):                                    # 정렬을 기준으로 인접한 행성끼리\n",
+        "            edges.append([nodes[j][3],nodes[j+1][3],            # 두 행성의 인덱스와 계산한 거리를\n",
+        "                          cal_cost(nodes[j], nodes[j+1])])      # 간선에 추가\n",
+        "\n",
+        "    sorted_edges = sorted(edges, key=lambda x : x[2])       # 선 리스트 거리 기준으로 정렬\n",
+        "\n",
+        "    result_mst = 0                      # MST 가중치 변수 생성\n",
+        "    for i, j, k in sorted_edges:        # 모든 간선들 확인\n",
+        "        x = findParent(i)                   # i의 부모 노드 찾기\n",
+        "        y = findParent(j)                   # j의 부모 노드 찾기\n",
+        "\n",
+        "        if x != y:                          # i와 j의 부모 노드가 같지 않으면\n",
+        "            union(x,y)                          # i,j의 부모 노드 합집합\n",
+        "            result_mst += k                     # 결과값에 가중치 추가\n",
+        "    \n",
+        "    print(result_mst)                   # 결과 값 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
